src/test/resources/shexTest/negativeStructure/Cycle1Negation1.shex
PREFIX :       <http://example.org/>

:S NOT { :a { :b @:S } }
